[tool.poetry]
name = "pytorch-image"
version = "0.0.0"  # set by github publish workflow
description = "Minimalistic library designed to be an interface for the model input with a lightweight `Image` class."
authors = ["Richard Löwenström <samedii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
torch = "*"
numpy = "*"
pillow = "*"
pydantic = "^2.0.0"
albumentations = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
pytest = "^8.3.3"
ruff = "^0.6.8"

[tool.poetry.extras]
train = ["albumentations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
